[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radtree"
version = "0.1.0"
description = "Radial visualization helpers for scikit-learn decision trees"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Pedro Octaviano" }]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
  "matplotlib>=3.8",
  "networkx>=3.2",
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "scipy>=1.11",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["build>=1.4", "pytest>=9.0", "ruff>=0.15"]
umap = ["umap-learn>=0.5.11"]

[project.urls]
Homepage = "https://github.com/poctaviano/radtree"
Repository = "https://github.com/poctaviano/radtree"
Issues = "https://github.com/poctaviano/radtree/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["radtree*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
